@@ -3,6 +3,8 @@
 
 #include <RcppEigen.h>
 
+using namespace Rcpp;
+
 int RcppCallback(time_t *last, Rcpp::Function cb, double progress, double callbackInterval);
 
 double dinvgamma1_Rcpp(const double x, const double a, const double b);
@@ -10,6 +12,11 @@ double ddinvgamma1_Rcpp(const double x, const double a, const double b);
 double d2dinvgamma1_Rcpp(const double x, const double a, const double b);
 
 double log_determinant_pos_def(Eigen::MatrixXd A);
+
+List jzs_log_marginal_posterior_logg(const NumericVector q, const double sumSq, const NumericVector Cny0, const NumericMatrix CnX0, const NumericMatrix CnytCnX0, const NumericVector rscale, const NumericVector gMap, const NumericVector gMapCounts, const NumericMatrix priorX, const int incCont, const bool limit, const NumericVector limits, const int which);
+
+double jzs_mc_marg_like(const NumericVector g, const double sumSq, const NumericVector Cny, const NumericMatrix CnX, const NumericMatrix CnytCnX, const NumericVector rscale, const NumericVector gMap, const NumericVector gMapCounts, const NumericMatrix priorX, const double logDetPriorX, const int incCont);
+double jzs_importance_marg_like(const NumericVector q, const NumericVector mu, const NumericVector sig, const double sumSq, const NumericVector Cny, const NumericMatrix CnX, const NumericMatrix CnytCnX, const NumericVector rscale, const NumericVector gMap, const NumericVector gMapCounts, const NumericMatrix priorX, const double logDetPriorX, const int incCont);
 
 
 // sign function 
